--- a/projeto-cordel/style.css
+++ b/projeto-cordel/style.css
@@ -105,7 +105,6 @@ footer {
 
 @media (max-width: 320px) {
     section > p {
-        line-height: 2em;
-        font-size: 5vw;
+        font-size: 1.2rem; /* Aumente o valor conforme necessário */
     }
 }
