--- a/projeto-cordel/style.css
+++ b/projeto-cordel/style.css
@@ -78,6 +78,7 @@ section.imagem {
 
 section.imagem > p {
     display: inline-block;
+    font-family: var(--font03);
     padding: 2rem;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 10px;
@@ -105,6 +106,7 @@ footer {
 
 @media (max-width: 320px) {
     section > p {
-        font-size: 1.2rem; /* Aumente o valor conforme necessário */
+        line-height: 2em;
+        font-size: 5vw;
     }
 }
