--- a/projeto-cordel/style.css
+++ b/projeto-cordel/style.css
@@ -49,11 +49,12 @@ a:hover {
     text-decoration: underline;
 }
 
-section {
-    line-height: 2em;
-    padding-left: 30px;
-    font-family: var(--font03);
-    font-size: 3vw;
+main > section p {
+    text-align: justify; /* Justificação do texto */
+    font-family: var(--font03); /* Fonte do texto */
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.233); /* Sombra do texto */
+    font-size: 1.5em; /* Tamanho da fonte */
+    line-height: 1.5em; /* Espaçamento entre linhas */
 }
 
 section.normal {
@@ -78,11 +79,9 @@ section.imagem {
 
 section.imagem > p {
     display: inline-block;
-    font-family: var(--font03);
     padding: 2rem;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 10px;
-    text-shadow: 1px 1px 2px #000;
     margin: 2rem 0;
     backdrop-filter: blur(4px);
 }
@@ -101,12 +100,4 @@ footer {
     color: #fff;
     text-align: center;
     padding: 1rem;
-}
-
-
-@media (max-width: 320px) {
-    section > p {
-        line-height: 2.5em;
-        font-size: 5vw;
-    }
 }
