--- a/projeto-cordel/style.css
+++ b/projeto-cordel/style.css
@@ -37,6 +37,7 @@ header > h1 {
 
 header > p {
     padding-bottom: 50px;
+    font-size: 2.5vh;
 }
 
 a {
@@ -50,11 +51,10 @@ a:hover {
 }
 
 main > section p {
-    text-align: justify; /* Justificação do texto */
     font-family: var(--font03); /* Fonte do texto */
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.233); /* Sombra do texto */
-    font-size: 1.5em; /* Tamanho da fonte */
-    line-height: 1.5em; /* Espaçamento entre linhas */
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.164); /* Sombra do texto */
+    font-size: 5vh; /* Tamanho da fonte */
+    line-height: 1.8em; /* Espaçamento entre linhas */
 }
 
 section.normal {
@@ -100,4 +100,13 @@ footer {
     color: #fff;
     text-align: center;
     padding: 1rem;
+}
+
+@media (max-width: 320px) {
+    main > section p {
+        font-family: var(--font03); /* Fonte do texto */
+        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.164); /* Sombra do texto */
+        font-size: 3vh; /* Tamanho da fonte */
+        line-height: 2em; /* Espaçamento entre linhas */
+    }
 }
