--- a/projeto-social/styles.css
+++ b/projeto-social/styles.css
@@ -1,49 +1,148 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Passion+One:wght@400;700;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-* {
-    font-family: Arial, Helvetica, sans-serif;
-
-    padding: 0;
-    margin: 0;
+:root {
+    --primary-color: #9F6496;
+    --secondary-color: #ecd4ea;
+    --background-color: #121216;
+    --text-color: #fff;
+    --font-family: 'Poppins', sans-serif;
 }
 
-html, body {
-    height: 100vh;
-    width: 100vw;
-
-    background-color: #121216;
+* {
+    font-family: var(--font-family);
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 body {
-    background: url('image/fundo-madeira.jpg') no-repeat top center;
-    background-size: cover;
-    background-attachment: fixed;
-}
-
-main {
-    position: relative;
     height: 100vh;
+    width: 100vw;
+    background-color: var(--background-color);
+    color: var(--text-color);
 }
 
-section#iphone {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
-    height: 627px;
-    width: 311px;
-
-    background: url('image/frame-iphone.png') no-repeat;
+.main-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: calc(112vh - 80px); /* Ajuste para o cabeçalho */
+    padding: 0 150px;
 }
 
-iframe#tela {
+.iphone-container {
     position: relative;
-    top: 80px;
-    left: 22px;
+    width: 21.5vw;
+    height: auto;
+    margin-left: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    overflow: hidden;
+    transition: transform 0.3s ease;
+}
 
-    width: 269px;
-    height: 471.4px;
+.iphone-container:hover {
+    transform: scale(1.02);
+}
+
+.iphone-container img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+.iphone-screen {
+    position: absolute;
+    top: 12.7%;
+    left: 6.8%;
+    width: 86.5%;
+    height: 75.5%;
+    border-radius: 5px;
+    border: none;
+}
+
+.text-wrapper {
+    max-width: 450px;
+    margin: auto 20px;
+}
+
+.greeting {
+    font-size: 1.2em;
+    color: #ccc;
+    margin-bottom: 10px;
+}
+
+.developer-name {
+    font-size: 2.5em;
+    margin-bottom: 5px;
+    font-weight: 600;
+}
+
+.developer-title {
+    font-size: 1.5em;
+    font-weight: 300;
+}
+
+.social-nav {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-right: 20px;
+}
+
+.social-link {
+    display: inline-block;
+    transition: transform 0.3s ease;
+}
+
+.social-link:hover {
+    transform: scale(1.1);
+}
+
+.social-icon {
+    box-shadow: 0px 0px 5px 2px var(--primary-color);
+    border-radius: 50%;
+    padding: 5px;
+    height: 35px;
+    width: 35px;
+    transition: background-color 0.3s ease;
+}
+
+.social-icon:hover {
+    background-color: var(--secondary-color);
+    cursor: pointer;
+}
+
+/* Responsividade */
+@media (max-width: 768px) {
+    .main-content {
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        padding: 25px;
+    }
+
+    .iphone-container,
+    .text-wrapper,
+    .social-nav {
+        margin: 10px 0;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 0.8rem;
+    }
+    .text-wrapper > h1 {
+        font-size: 1.4em;
+        margin: 5px;
+        width: 100%;
+    }
+
+    .iphone-container {
+        width: 63vw;
+    }
+
+    .social-nav {
+        flex-direction: row;
+        justify-content: center;
+        margin-top: 20px;
+        gap: 25px;
+    }
 }
