--- a/projeto-social/styles.css
+++ b/projeto-social/styles.css
@@ -30,15 +30,13 @@ body {
     justify-content: space-between;
     align-items: center;
     height: calc(112vh - 80px); /* Ajuste para o cabeçalho */
-    padding: 0 150px;
+    padding: 0 10%;
 }
 
 .iphone-container {
     position: relative;
     width: 21.5vw;
     height: auto;
-    margin-left: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
     overflow: hidden;
     transition: transform 0.3s ease;
@@ -67,6 +65,10 @@ body {
 .text-wrapper {
     max-width: 450px;
     margin: auto 20px;
+}
+
+.text-wrapper > h2 {
+    margin-bottom: 15px;
 }
 
 .greeting {
@@ -158,10 +160,6 @@ img.social-img {
         font-size: 2.5em;
     }
 
-    .iphone-container {
-        width: 17vw;
-    }
-
     .social-nav {
         flex-direction: row;
         justify-content: center;
@@ -172,28 +170,16 @@ img.social-img {
 
 @media (min-width: 2560px) {
     .text-wrapper > h1, h2 {
-        font-size: 4.5rem;
+        font-size: 4rem;
         width: 700px;
     }
     .text-wrapper > p {
-        font-size: 2.2rem;
+        font-size: 2rem;
         width: 940px;
     }
     .social-nav > a > img {
         height: 90px;
         width: 90px;
         margin: 0px 0px 40px 550px;
-    }
-}
-
-@media (min-width: 1200px) {
-    .h1, h1 {
-        font-size: 2.5rem;
-    }
-}
-
-@media (max-width: 360px) {
-    .iphone-container {
-        width: 45vw !important;
     }
 }
