--- a/projeto-login/assets/css/global/variables.css
+++ b/projeto-login/assets/css/global/variables.css
@@ -1,8 +1,18 @@
 :root {
-    /* Cores */
+    /* Cores do Login e Cadastro */
     --cor-fundo: #fff;
     --cor-outono: #1E5E7A;
     --cor-primavera: #3799C6;
+
+    --cor-linhas: 2px solid rgb(185, 185, 185);
+
+    --cor-group: #888888; /* Cor do Registro */
+    --cor-shadbut: 5px 7px 10px 0px rgba(0, 0, 0, 0.480);
+
+    /* Cores do WhatsApp */
+    --cor-whats: #03D303;
+    --cor-whatshover: rgba(0, 166, 0, 0.800);
+    --cor-whatsshadow: 5px 7px 10px 0px rgba(0, 0, 0, 0.480);
 
     /* Fontes */
     --font-padrao: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
