--- a/projeto-login/assets/css/global/variables.css
+++ b/projeto-login/assets/css/global/variables.css
@@ -7,6 +7,7 @@
     --cor-linhas: 2px solid rgb(185, 185, 185);
 
     --cor-group: #888888; /* Cor do Registro */
+    --cor-butreg: #0051d0;
     --cor-shadbut: 5px 7px 10px 0px rgba(0, 0, 0, 0.480);
 
     /* Cores do WhatsApp */
