--- a/projeto-login/assets/css/partials/section-quatro.css
+++ b/projeto-login/assets/css/partials/section-quatro.css
@@ -9,14 +9,7 @@ section.register {
     flex-direction: column;
 }
 
-section.register > div {
-    background-color: var(--cor-fundo);
-    border-radius: 30px;
-    height: 520px;
-    width: 400px;
-}
-
-section.register > div > h1 {
+section.register > h1 {
     font-family: var(--font-logo);
     color: var(--cor-outono);
 
@@ -26,7 +19,7 @@ section.register > div > h1 {
     padding-bottom: 5px;
 }
 
-section.register > div > p {
+section.register > p {
     font-family: var(--font-text);
     color: var(--cor-group);
 
@@ -35,7 +28,7 @@ section.register > div > p {
     padding-bottom: 40px;
 }
 
-section.register > div > form {
+section.register > form {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -46,7 +39,7 @@ section.register > div > form {
     font-weight: bold;
 }
 
-section.register > div > form > input {
+section.register > form > input {
     margin-bottom: 25px;
     padding: 0 50px;
     width: 100%;
