🔧 Fix: Ajustado comportamento responsivo na tela de login

--- a/projeto-login/assets/css/global/normalize.css
+++ b/projeto-login/assets/css/global/normalize.css
@@ -7,11 +7,14 @@
     box-sizing: border-box;
 }
 
-main {
+body, html, main {
     display: flex;
+    
+    width: 100vw;
+    height: 100vh;
 }
 
-body, html, section {
-    width: 100vw;
+section {
+    width: 50vw;
     height: 100vh;
 }
