--- a/projeto-login/assets/css/partials/section-dois.css
+++ b/projeto-login/assets/css/partials/section-dois.css
@@ -1,4 +1,58 @@
 section.imagem {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    height: 100vh;
+    width: 50vw;
+}
+
+section.imagem > img {
+    height: 86.5%;
+    width: 100%;
+}
+
+section.imagem > div {
+    display: flex;
+    justify-content: end;
+    align-items: end;
+    width: 91.5%;
+}
+
+
+section.imagem > div > a {
+    background-color: var(--cor-whats);
+    box-shadow: var(--cor-shadbut);
+    color: var(--cor-fundo);
+
+    font-family: var(--font-text);
+    text-decoration: none;
+
+    gap: 10px;
+    padding: 10px;
+    border-radius: 20px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+section.imagem > div > a:hover {
+    background-color: var(--cor-whatshover);
+}
+
+
+
+
+
+
+
+
+
+
+
+/* section.imagem {
     height: 100vh;
     width: 50vw;
 }
@@ -33,4 +87,4 @@ section.imagem > div > a {
 
 section.imagem > div > a:hover {
     background-color: var(--cor-whatshover);
-}
+} */
