--- a/projeto-login/assets/css/partials/section-dois.css
+++ b/projeto-login/assets/css/partials/section-dois.css
@@ -20,18 +20,18 @@ section.imagem > div {
     width: 91.5%;
 }
 
-
 section.imagem > div > a {
-    background-color: var(--cor-whats);
-    box-shadow: var(--cor-shadbut);
-    color: var(--cor-fundo);
-
-    font-family: var(--font-text);
+    background-color: var(--cor-destaque);
+    box-shadow: var(--sombra-padrao);
+    color: var(--cor-texto-claro);
+    font-family: var(--fonte-primaria);
+    gap: var(--espacamento-medio);
+    padding: var(--espacamento-medio);
+    border-radius: var(--borda-radius-media);
+    
+    transition: 0.3s ease-in-out;
     text-decoration: none;
-
-    gap: 10px;
-    padding: 10px;
-    border-radius: 20px;
+    font-size: 2.2vh;
 
     display: flex;
     justify-content: center;
@@ -39,52 +39,5 @@ section.imagem > div > a {
 }
 
 section.imagem > div > a:hover {
-    background-color: var(--cor-whatshover);
+    background-color: var(--cor-hover);
 }
-
-
-
-
-
-
-
-
-
-
-
-/* section.imagem {
-    height: 100vh;
-    width: 50vw;
-}
-
-section.imagem > picture {
-    height: 100vh;
-    width: 100vw;
-}
-
-section.imagem > div {
-    display: flex;
-    justify-content: end;
-    padding: 20px 30px;
-}
-
-section.imagem > div > a {
-    background-color: var(--cor-whats);
-    box-shadow: var(--cor-whatsshadow);
-    color: var(--cor-fundo);
-
-    font-family: var(--font-text);
-    text-decoration: none;
-
-    gap: 10px;
-    padding: 10px;
-    border-radius: 20px;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-section.imagem > div > a:hover {
-    background-color: var(--cor-whatshover);
-} */
