--- a/projeto-login/assets/css/partials/section-um.css
+++ b/projeto-login/assets/css/partials/section-um.css
@@ -1,6 +1,5 @@
 section.login {
-    background-color: var(--cor-primavera);
-
+    background-color: var(--cor-primaria);
     display: flex; 
     justify-content: center;
     align-items: center;
@@ -9,46 +8,39 @@ section.login {
 
 section.login > div {
     background-color: var(--cor-fundo);
-    box-shadow: var(--cor-shadbut);
-    border-radius: 30px;
+    box-shadow: var(--sombra-padrao);
+    border-radius: var(--borda-radius-grande);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 
     height: 80%;
     width: 60%;
 }
 
-main > section.login > div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
 section.login > div > header {
-    font-family: var(--font-logo);
-    color: var(--cor-outono);
-
+    font-family: var(--fonte-secundaria);
+    color: var(--cor-secundaria);
     text-align: center;
-    width: 100%;
 }
 
 section.login > div > header > h1 {
-    font-size: 2.2vw;
+    font-size: var(--tamanho-h1);
     letter-spacing: 1.5px;
 }
 
 section.login > div > header > h2 {
-    font-size: 1.2vw;
+    font-size: var(--tamanho-h2);
 }
 
 section.login > div > p {
-    font-family: var(--font-text);
-
-    display: block;
-    margin: 25px 0; /* Adiciona espaço após a quebra de linha */
-
+    font-family: var(--fonte-padrao);
     text-align: center;
-    font-size: 1.4vw;
-    font-weight: 300;
+    margin: 25px 0;
+    font-size: 3vh;
+    font-weight: 400;
 }
 
 section.login > div > p > span {
@@ -58,72 +50,77 @@ section.login > div > p > span {
 
 section.login > div > form {
     margin: 0 auto;
-    height: 50%;
     width: 80%;
 }
 
-form > div.painel > input:nth-child(-n + 4) {
-    display: flex;
-
-    margin: 5px 0 20px;
-    width: 100%;
-
-    border: 0;
-    outline: 0;
-
-    font-family: var(--font-text);
-    border-bottom: var(--cor-linhas);
+div.painel > label {
+    font-size: 2.5vh;
+    font-family: var(--fonte-padrao);
 }
 
-form > div.painel > div.reminder {
+div.painel > input#ilogin, 
+div.painel > input#isenha {
+    margin: 5px 0 20px;
+    width: 100%;
+    font-size: 2.5vh;
+    border: 0;
+    outline: 0;
+    font-family: var(--fonte-primaria);
+    border-bottom: 2px solid var(--cor-borda);
+}
+
+div.painel > div {
     display: flex;
-    
-    font-family: var(--font-text);
-    font-weight: 300;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2vw;
+    font-weight: 400;
+    font-family: var(--fonte-padrao);
+    gap: 10px;
+}
+
+div.painel > div > p > a {
+    color: var(--cor-primaria);
+    text-decoration: none;
+}
+
+div.painel > div > p > a:hover {
+    color: var(--cor-secundaria);
+    text-decoration: underline;
 }
 
 input#ilembrar {
-    margin-right: 5px; /* Afasta a checkbox da label */
-}
-
-div.reminder > p > a {
-    font-family: var(--font-text);
-    color: var(--cor-primavera);
-
-    text-align: justify;
-
-    font-weight: 600;
-    font-size: 1.1vw;
-    margin-left: 10px;
+    margin-right: 5px;
 }
 
 .login form > input[type=submit] {
-    background-color: var(--cor-primavera);
-    color: var(--cor-fundo);
-
+    background-color: var(--cor-botao);
+    color: var(--cor-texto-botao);
     width: 100%;
     height: 20%;
     margin: 5% 0;
-
-    border-radius: 30px;
+    font-size: 1.3vw;
+    letter-spacing: 1.5px;
+    transition: 0.3s ease-in-out;
+    border-radius: var(--border-radius-botao);
     border: none;
     cursor: pointer;
 }
 
 .login form > input[type=submit]:hover {
-    background-color: var(--cor-outono);
+    background-color: var(--cor-botao-hover);
 }
 
 .login form > p {
     display: flex;
     justify-content: center;
     align-items: center;
-
-    gap: 5px;
+    font-size: 1.2vw;
+    gap: 8px;
 }
 
 .login form > p > a {
-    color: var(--cor-outono);
+    color: var(--cor-secundaria);
     text-decoration: none;
 }
 
