--- a/projeto-login/assets/css/global/normalize.css
+++ b/projeto-login/assets/css/global/normalize.css
@@ -1,15 +1,14 @@
 @charset "UTF-8";
 
 * {
-    font-family: var(--font-fundo);
+    font-family: var(--font-padrao);
+    box-sizing: border-box;
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
 }
 
 body, html, main {
     display: flex;
-    
     width: 100vw;
     height: 100vh;
 }
