--- a/projeto-login/assets/css/partials/section-um.css
+++ b/projeto-login/assets/css/partials/section-um.css
@@ -17,7 +17,7 @@ section.login > div {
     flex-direction: column;
 
     height: 80%;
-    width: 60%;
+    width: 55%;
 }
 
 section.login > div > header {
@@ -27,34 +27,33 @@ section.login > div > header {
 }
 
 section.login > div > header > h1 {
-    font-size: var(--tamanho-h1);
+    font-size: var(--tamanho-logo);
     letter-spacing: 1.5px;
 }
 
 section.login > div > header > h2 {
-    font-size: var(--tamanho-h2);
+    font-size: var(--tamanho-subtxt);
 }
 
 section.login > div > p {
     font-family: var(--fonte-padrao);
+    font-size: var(--tamanho-subtxt);
     text-align: center;
     margin: 25px 0;
-    font-size: 3vh;
     font-weight: 400;
 }
 
 section.login > div > p > span {
     font-weight: bold;
-    letter-spacing: 1px;
 }
 
 section.login > div > form {
     margin: 0 auto;
-    width: 80%;
+    width: 85%;
 }
 
 div.painel > label {
-    font-size: 2.5vh;
+    font-size: var(--tamanho-label);
     font-family: var(--fonte-padrao);
 }
 
@@ -69,40 +68,20 @@ div.painel > input#isenha {
     border-bottom: 2px solid var(--cor-borda);
 }
 
-div.painel > div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.2vw;
-    font-weight: 400;
-    font-family: var(--fonte-padrao);
-    gap: 10px;
-}
-
-div.painel > div > p > a {
-    color: var(--cor-primaria);
-    text-decoration: none;
-}
-
-div.painel > div > p > a:hover {
-    color: var(--cor-secundaria);
-    text-decoration: underline;
-}
-
 input#ilembrar {
-    margin-right: 5px;
+    margin-right: 10px;
 }
 
 .login form > input[type=submit] {
+    border-radius: var(--border-radius-botao);
     background-color: var(--cor-botao);
+    font-size: var(--tamanho-button);
     color: var(--cor-texto-botao);
     width: 100%;
     height: 20%;
     margin: 5% 0;
-    font-size: 1.3vw;
     letter-spacing: 1.5px;
     transition: 0.3s ease-in-out;
-    border-radius: var(--border-radius-botao);
     border: none;
     cursor: pointer;
 }
@@ -112,16 +91,14 @@ input#ilembrar {
 }
 
 .login form > p {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.2vw;
-    gap: 8px;
+    text-align: center;
+    margin-top: 5px;
+    font-size: var(--tamanho-subtxt);
 }
 
 .login form > p > a {
-    color: var(--cor-secundaria);
     text-decoration: none;
+    color: var(--cor-secundaria);
 }
 
 .login form > p > a:hover {
