--- a/projeto-login/assets/css/global/mobile.css
+++ b/projeto-login/assets/css/global/mobile.css
@@ -12,3 +12,10 @@
         width: 40% !important;
     }
 }
+
+
+@media screen and (max-width: 1000px) {
+    section.login > div {
+        width: 60% !important;
+    }
+}
