--- a/projeto-login/assets/css/global/mobile.css
+++ b/projeto-login/assets/css/global/mobile.css
@@ -1,21 +1,15 @@
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 720px) {
     section.imagem {
         display: none !important;
     }
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 720px) {
     section.login {
         width: 100vw !important;
     }
     section.login > div {
-        width: 40% !important;
-    }
-}
-
-
-@media screen and (max-width: 1000px) {
-    section.login > div {
-        width: 60% !important;
+        width: 100% !important;
+        height: 100% !important;
     }
 }
