--- a/projeto-login/assets/css/global/variables.css
+++ b/projeto-login/assets/css/global/variables.css
@@ -1,46 +1,1 @@
-:root {
-    /* Paleta de Cores */
-    --cor-primaria: #3799C6;
-    --cor-secundaria: #1E5E7A;
-    --cor-destaque: #03D303;
-    --cor-fundo: #fff;
-    --cor-subtitulo: #888888;
-    --cor-texto-claro: #ffffff;
-    --cor-borda: #E8E8E8;
-    --cor-hover: rgba(0, 166, 0, 0.800);
-    
-    /* Tipografia */
-    --fonte-primaria: "Poppins", serif;
-    --fonte-secundaria: "Montserrat", serif;
-    --fonte-padrao: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    
-    /* Tamanhos de Fonte */
-    --tamanho-h1: 4.5vh;
-    --tamanho-h2: 2.5vh;
-    --tamanho-padrao: 1.2rem;
-    --tamanho-pequeno: 0.9em;
-
-    /* Tamanhos de Fonte */
-    --tamanho-logo: min(30px, 3.7vw);
-    --tamanho-subtxt: min(16px, 2.2vw);
-    --tamanho-label: min(16px, 4vw);
-    --tamanho-button: min(16px, 3vw);
-    
-    /* Espaçamentos */
-    --espacamento-pequeno: 5px;
-    --espacamento-medio: 10px;
-    --espacamento-grande: 40px;
-    
-    /* Bordas e Sombras */
-    --borda-radius-pequena: 10px;
-    --borda-radius-media: 20px;
-    --borda-radius-grande: 30px;
-    --sombra-padrao: 5px 7px 10px rgba(0, 0, 0, 0.48);
-    
-    /* Botões */
-    --cor-botao: var(--cor-primaria);
-    --cor-botao-hover: var(--cor-secundaria);
-    --cor-texto-botao: var(--cor-texto-claro);
-    --padding-botao: 10px 50px;
-    --border-radius-botao: 30px;
-}
+/* VARIAVES CSS */
