--- a/projeto-login/assets/css/pages/index/style.css
+++ b/projeto-login/assets/css/pages/index/style.css
@@ -6,3 +6,6 @@
 
 /* Contatos */
 @import url('../contatos/contato.css');
+
+/* Emoticons */
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css');
