--- a/projeto-login/assets/css/global/mobile.css
+++ b/projeto-login/assets/css/global/mobile.css
@@ -1,5 +1,7 @@
-@media screen and (min-width: 768px) {
-    ::-webkit-scrollbar {
-        display: none;
+@media screen and (max-width: 768px) {
+    main {
+        height: 100vh;
+        width: 100%;
+        overflow: hidden;
     }
 }
