--- a/projeto-login/assets/css/global/mobile.css
+++ b/projeto-login/assets/css/global/mobile.css
@@ -1,5 +1,10 @@
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 395px) {
     main {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+
         height: 100vh;
         width: 100%;
         overflow: hidden;
