--- a/projeto-login/assets/css/global/mobile.css
+++ b/projeto-login/assets/css/global/mobile.css
@@ -1,9 +1,11 @@
-@media screen and (max-width: 395px) {
+@media screen and (max-width: 720px) {
     main {
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
+
+        background-image: none !important;
 
         height: 100vh;
         width: 100%;
