--- a/projeto-login/assets/css/global/normalize.css
+++ b/projeto-login/assets/css/global/normalize.css
@@ -1,33 +1,34 @@
 @charset "UTF-8";
 
 * {
-    box-sizing: border-box;
     font-family: "Inter", sans-serif;
+    box-sizing: border-box;
     text-decoration: none;
-    border: 0;
+    color: #ddd;
     padding: 0;
     margin: 0;
-    color: #ddd;
 }
 
 html, body {
     background-color: #252B2B;
-    width: 100vw;
     height: 100vh;
+    width: 100vw;
 }
 
 main {
     background-image: url('../../images/background.png') !important;
     background-size: cover !important;
-    width: 100vw;
+    
+    position: relative;
     height: 100vh;
+    width: 100vw;
 }
 
 header {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    padding: 25px 60px;
+    padding: 2.5% 3%;
     gap: 15px;
 }
 
@@ -38,6 +39,6 @@ header > div.circulo {
 
 header > h1 {
     font-family: "Inter", sans-serif;
-    font-weight: 400;
-    font-size: 1.2rem;
+    font-weight: 300;
+    font-size: 1.4rem;
 }
